@@ -63,7 +63,7 @@ public final class ManhattanConnectionRouter extends AbstractRouter {
 			r--;
 		Integer i;
 		while (proximity < r) {
-			i = new Integer(r + proximity * direction);
+			i = Integer.valueOf(r + proximity * direction);
 			if (!colsUsed.containsKey(i)) {
 				colsUsed.put(i, i);
 				reserveColumn(connection, i);
@@ -152,7 +152,7 @@ public final class ManhattanConnectionRouter extends AbstractRouter {
 			r--;
 		Integer i;
 		while (proximity < r) {
-			i = new Integer(r + proximity * direction);
+			i = Integer.valueOf(r + proximity * direction);
 			if (!rowsUsed.containsKey(i)) {
 				rowsUsed.put(i, i);
 				reserveRow(connection, i);
@@ -299,9 +299,9 @@ public final class ManhattanConnectionRouter extends AbstractRouter {
 		List positions = new ArrayList(5);
 		boolean horizontal = startNormal.isHorizontal();
 		if (horizontal)
-			positions.add(new Integer(start.y));
+			positions.add(Integer.valueOf(start.y));
 		else
-			positions.add(new Integer(start.x));
+			positions.add(Integer.valueOf(start.x));
 		horizontal = !horizontal;
 
 		if (startNormal.dotProduct(endNormal) == 0) {
@@ -319,7 +319,7 @@ public final class ManhattanConnectionRouter extends AbstractRouter {
 					else
 						i = average.x;
 				}
-				positions.add(new Integer(i));
+				positions.add(Integer.valueOf(i));
 				horizontal = !horizontal;
 
 				if (endNormal.dotProduct(direction) > 0)
@@ -331,7 +331,7 @@ public final class ManhattanConnectionRouter extends AbstractRouter {
 					else
 						i = average.x;
 				}
-				positions.add(new Integer(i));
+				positions.add(Integer.valueOf(i));
 				horizontal = !horizontal;
 			}
 		} else {
@@ -343,14 +343,14 @@ public final class ManhattanConnectionRouter extends AbstractRouter {
 				else
 					i = endNormal.similarity(end.getAdded(endNormal
 							.getScaled(10)));
-				positions.add(new Integer(i));
+				positions.add(Integer.valueOf(i));
 				horizontal = !horizontal;
 			} else {
 				// 3 or 1
 				if (startNormal.dotProduct(direction) < 0) {
 					i = startNormal.similarity(start.getAdded(startNormal
 							.getScaled(10)));
-					positions.add(new Integer(i));
+					positions.add(Integer.valueOf(i));
 					horizontal = !horizontal;
 				}
 
@@ -358,21 +358,21 @@ public final class ManhattanConnectionRouter extends AbstractRouter {
 					i = average.y;
 				else
 					i = average.x;
-				positions.add(new Integer(i));
+				positions.add(Integer.valueOf(i));
 				horizontal = !horizontal;
 
 				if (startNormal.dotProduct(direction) < 0) {
 					i = endNormal.similarity(end.getAdded(endNormal
 							.getScaled(10)));
-					positions.add(new Integer(i));
+					positions.add(Integer.valueOf(i));
 					horizontal = !horizontal;
 				}
 			}
 		}
 		if (horizontal)
-			positions.add(new Integer(end.y));
+			positions.add(Integer.valueOf(end.y));
 		else
-			positions.add(new Integer(end.x));
+			positions.add(Integer.valueOf(end.x));
 
 		processPositions(start, end, positions, startNormal.isHorizontal(),
 				conn);
